--- a/index.html
+++ b/index.html
@@ -78,12 +78,24 @@
             <h2>About Us</h2>
             <p>Welcome to Dipendra Kirana Pasal, your trusted wholesale grocery store in Janakpur, Nepal. We provide high-quality products at wholesale prices for businesses and individuals alike.</p>
         </section>
-
+            <h2>Find Us On Maps</h2>
+        <!-- Google Maps Embed for Dipendra Kirana Pasal -->
+<div class="map" style="width:100%; max-width:800px; margin:auto;">
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3532.123456789!2d85.9321725!3d26.7361736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2snp!4v1690000000000"
+    width="100%"
+    height="450"
+    style="border:0;"
+    allowfullscreen=""
+    loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+</div>
         <section id="products">
             <h2>Our Products</h2>
             <ul>
-                <li>Rice, Flour, and Grains</li>
-                <li>Cooking Oils and Spices</li>
+                <li>kachamango candy,london dairy ,etc</li>
+                <li>Bounce biscuit,tasty biscuit , humtum crackers etc.</li>
                 <li>Snacks and Beverages</li>
                 <li>Daily Essentials and Household Items</li>
                 <li>Fresh and Packaged Products</li>
@@ -94,8 +106,7 @@
             <h2>Contact Us</h2>
             <div class="contact-info">
                 <p><strong>Address:</strong> Mills Area, Janakpur, Nepal</p>
-                <p><strong>Phone:</strong> +977 9844027440</p>
-                <p><strong>Email:</strong> info@dipendrakirana.com (optional)</p>
+                <p><strong>Phone:</strong> +977 9844027440 </p>
             </div>
         </section>
     </main>
