--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dipendra Kirana Pasal</title>
     <style>
+        <link rel="icon" type="image/png" href="images/logo.png">
         body {
             font-family: Arial, sans-serif;
             margin: 0;
