--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <header>
     <div style="display: flex; align-items: center;">
       <img src="images/logo.png" alt="Dipendra Kirana Pasal Logo">
-      <span class="phone">📞 +977 9814879930</span>
+      <span class="phone">📞 +977 9844027440</span>
     </div>
     <nav>
       <a href="#about">About</a>
@@ -151,7 +151,7 @@
     <h2>Our Products</h2>
     <div class="products-container">
       <div class="product">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/68/Chocolate.jpg" alt="Chocolates">
+        <img src="https://images.app.goo.gl/HPcZDdq3tNFU44ia6" alt="Chocolates">
         <p>Chocolates</p>
       </div>
       <div class="product">
