--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,12 +15,15 @@
       height: 100%;
       scroll-behavior: smooth;
     }
+
+    /* HEADER */
     header {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       display: flex;
+      flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
       padding: 10px 20px;
@@ -30,9 +34,13 @@
     header img {
       height: 40px;
     }
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+    }
     nav a {
       color: #fff;
-      margin-left: 20px;
       text-decoration: none;
       font-weight: bold;
       transition: color 0.3s;
@@ -41,14 +49,19 @@
       color: #ffcc00;
     }
     .phone {
-      margin-left: 20px;
       font-weight: bold;
+      margin-left: 10px;
     }
+
+    /* HERO SECTION */
     .hero {
       position: relative;
       height: 100vh;
       background: url('images/background.png') no-repeat center center/cover;
       margin-top: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .overlay {
       position: absolute;
@@ -66,13 +79,17 @@
       flex-direction: column;
     }
     .overlay h1 {
-      font-size: 3em;
+      font-size: 2.5em;
+      margin-bottom: 15px;
+    }
+    .overlay p {
+      font-size: 1.1em;
       margin-bottom: 20px;
     }
     .overlay .buttons a {
       display: inline-block;
-      margin: 10px;
-      padding: 10px 20px;
+      margin: 8px;
+      padding: 10px 18px;
       background: #ffcc00;
       color: #000;
       border-radius: 5px;
@@ -83,30 +100,38 @@
     .overlay .buttons a:hover {
       background: #ffaa00;
     }
+
+    /* SECTIONS */
     .section {
       padding: 60px 20px;
       text-align: center;
     }
+
+    /* PRODUCTS */
     .products-container {
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-top: 30px;
       flex-wrap: wrap;
+      margin-top: 30px;
     }
     .product {
       background: #f9f9f9;
-      padding: 20px;
+      padding: 15px;
       border-radius: 10px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      width: 200px;
+      flex: 1 1 150px;
+      max-width: 220px;
       text-align: center;
     }
     .product img {
-      max-width: 100%;
+      width: 100%;
+      height: auto;
       border-radius: 10px;
       margin-bottom: 10px;
     }
+
+    /* CONTACT */
     .contact {
       background: #333;
       color: #fff;
@@ -118,6 +143,38 @@
       border: 0;
       border-radius: 10px;
       margin-top: 20px;
+    }
+
+    /* RESPONSIVE */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      nav {
+        width: 100%;
+        justify-content: space-around;
+        margin-top: 10px;
+      }
+      .overlay h1 {
+        font-size: 2em;
+      }
+      .overlay p {
+        font-size: 1em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .overlay h1 {
+        font-size: 1.5em;
+      }
+      .overlay .buttons a {
+        padding: 8px 14px;
+        font-size: 0.9em;
+      }
+      .product {
+        max-width: 150px;
+      }
     }
   </style>
 </head>
@@ -132,7 +189,9 @@
       <a href="#products">Products</a>
       <a href="#contact">Contact</a>
     </nav>
-  </header>  <section class="hero">
+  </header>
+
+  <section class="hero">
     <div class="overlay">
       <div>
         <h1>Dipendra Kirana Pasal</h1>
@@ -144,10 +203,14 @@
         </div>
       </div>
     </div>
-  </section>  <section id="about" class="section about">
+  </section>
+
+  <section id="about" class="section about">
     <h2>About Us</h2>
     <p>Dipendra Kirana Pasal is a wholesale grocer store located at Millsarea, Janakpur Dham. We offer a variety of chocolates, biscuits, and small toys with edible items.</p>
-  </section>  <section id="products" class="section">
+  </section>
+
+  <section id="products" class="section">
     <h2>Our Products</h2>
     <div class="products-container">
       <div class="product">
@@ -163,11 +226,13 @@
         <p>Small Toys</p>
       </div>
     </div>
-  </section>  <section id="contact" class="contact">
+  </section>
+
+  <section id="contact" class="contact">
     <h2>Contact Us</h2>
     <p>📍 Address: Millsarea, Janakpur Dham</p>
-    <p>📞 Phone: +977 9814879930</p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.122013954224!2d85.924!3d26.728!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ecf105f52a71b7%3A0xdfeee5ec3bd1d4f2!2sJanakpur!5e0!3m2!1sen!2snp!4v1691938123456!5m2!1sen!2snp" allowfullscreen="" loading="lazy"></iframe>
-
+    <p>📞 Phone: +977 9814879930</p>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.122013954224!2d85.924!3d26.728!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ecf105f52a71b7%3A0xdfeee5ec3bd1d4f2!2sJanakpur!5e0!3m2!1sen!2snp!4v1691938123456!5m2!1sen!2snp" allowfullscreen="" loading="lazy"></iframe>
   </section>
 </body>
 </html>
