--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <body>
   <header>
     <div style="display: flex; align-items: center;">
-      <img src="images/logo.png" alt="Dipendra Kirana Pasal Logo">
+      <img src="Images/logo.png" alt="Dipendra Kirana Pasal Logo">
       <span class="phone">📞 +977 9844027440</span>
     </div>
     <nav>
