--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     .hero {
       position: relative;
       height: 100vh;
-      background: url('Images/background.png') no-repeat center center/cover;
+      background: url('Images/20250817_185810.png') no-repeat center center/cover;
       margin-top: 60px;
       display: flex;
       align-items: center;
