--- a/index.html
+++ b/index.html
@@ -232,7 +232,15 @@
     <h2>Contact Us</h2>
     <p>📍 Address: Millsarea, Janakpur Dham</p>
     <p>📞 Phone: +977 9844027440</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.122013954224!2d85.924!3d26.728!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ecf105f52a71b7%3A0xdfeee5ec3bd1d4f2!2sJanakpur!5e0!3m2!1sen!2snp!4v1691938123456!5m2!1sen!2snp" allowfullscreen="" loading="lazy"></iframe>
+    <iframe
+  width="100%"
+  height="450"
+  style="border:0;"
+  loading="lazy"
+  allowfullscreen
+  referrerpolicy="no-referrer-when-downgrade"
+  src="https://maps.google.com/maps?q=26.736219,85.932148&z=20&output=embed">
+</iframe>
   </section>
 </body>
 </html>
