--- a/index.html
+++ b/index.html
@@ -240,12 +240,14 @@
   allowfullscreen
   referrerpolicy="no-referrer-when-downgrade"
   src="https://maps.google.com/maps?q=26.736219,85.932148&z=20&output=embed">
-</iframe>
+</iframe> <br> <br>
+    <center>
     <button 
   style="background-color:#34A853; color:white; padding:12px 20px; font-size:16px; border:none; border-radius:8px; cursor:pointer;" 
   onclick="window.open('https://www.google.com/maps/dir/?api=1&destination=26.7363758,85.9321213', '_blank')">
   🚗 Get Directions
-    </button>
+    </button></center>
+    <br><br>
   </section>
 </body>
 </html>
