--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   <header>
     <div style="display: flex; align-items: center;">
       <img src="Images/logo.png" alt="Dipendra Kirana Pasal Logo">
-      <span class="phone">📞 +977 9844027440</span>
+      <span class="phone">Dipendra Kirana Pasal</span>
     </div>
     <nav>
       <a href="#about">About</a>
