--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <h2>Our Products</h2>
     <div class="products-container">
       <div class="product">
-        <img src="https://images.app.goo.gl/HPcZDdq3tNFU44ia6" alt="Chocolates">
+        <img src="Images/images.png" alt="Chocolates">
         <p>Chocolates</p>
       </div>
       <div class="product">
