--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <p>Chocolates</p>
       </div>
       <div class="product">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Biscuits.jpg" alt="Biscuits">
+        <img src="Images/20250820_073220.png" alt="Biscuits">
         <p>Biscuits</p>
       </div>
       <div class="product">
