--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
   <section id="about" class="section about">
     <h2>About Us</h2>
-    <p>Dipendra Kirana Pasal is a wholesale grocer store located at Millsarea, Janakpur Dham. We offer a variety of chocolates, biscuits, and small toys with edible items.</p>
+    <p>Dipendra Kirana Pasal is a trusted wholesale grocer store located in Millsarea, Janakpur Dham. We specialize in providing quality chocolates, biscuits, and small edible toys in bulk, catering to local retailers and shopkeepers who purchase from us to sell in smaller quantities. Our focus is on offering fresh, affordable, and reliable products to support the community’s everyday needs.</p>
   </section>
 
   <section id="products" class="section">
