--- a/index.html
+++ b/index.html
@@ -227,7 +227,15 @@
       </div>
     </div>
   </section>
-
+<div style="display:flex; align-items:center; background-color:#333; color:#fff; border-radius:12px; padding:15px; max-width:600px; margin:20px auto; box-shadow:0 4px 6px rgba(0,0,0,0.2);">
+  <img src="Images/Screenshot_20250820_074500_Gallery.jpg" alt="Dipendra Kumar Sah" style="width:80px; height:80px; border-radius:50%; margin-right:15px; object-fit:cover;">
+  <div>
+    <h3 style="margin:0; font-size:1.2em;">Dipendra Kumar Sah</h3>
+    <p style="margin:5px 0 0 0; font-size:0.95em; line-height:1.4;">
+      "At Dipendra Kirana Pasal, our goal is to provide fresh and affordable products for our community. We take pride in helping local shopkeepers get quality chocolates, biscuits, and small toys in bulk, so they can serve their customers better."
+    </p>
+  </div>
+</div>
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
     <p>📍 Address: Millsarea, Janakpur Dham</p>
