--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dipendra Kirana Pasal</title>
+  <!-- Meta description for Google search -->
+<meta name="description" content="Dipendra Kirana Pasal is a trusted wholesale grocer store in Millsarea, Janakpur Dham. We provide chocolates, biscuits, and small edible toys in bulk for local shopkeepers.">
+
+<!-- Keywords -->
+<meta name="keywords" content="Dipendra Kirana Pasal, Janakpur wholesale store, wholesale chocolates, biscuits in bulk, small toys wholesale, local shop suppliers Janakpur">
+
+<!-- Open Graph tags for social sharing -->
+<meta property="og:title" content="Dipendra Kirana Pasal - Wholesale Grocer Store in Janakpur">
+<meta property="og:description" content="We provide fresh and affordable chocolates, biscuits, and small toys in bulk for local shopkeepers.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://yourwebsite.com">
+<meta property="og:image" content="https://yourwebsite.com/images/owner.png">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Dipendra Kirana Pasal - Wholesale Grocer Store in Janakpur">
+<meta name="twitter:description" content="We provide fresh and affordable chocolates, biscuits, and small toys in bulk for local shopkeepers.">
+<meta name="twitter:image" content="https://yourwebsite.com/images/owner.png">
   <style>
     * {
       margin: 0;
