--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dipendra Kirana Pasal</title>
+  <!-- Favicon -->
+<link rel="icon" type="image/png" href="Images/logo.png">
   <!-- Meta description for Google search -->
 <meta name="description" content="Dipendra Kirana Pasal is a trusted wholesale grocer store in Millsarea, Janakpur Dham. We provide chocolates, biscuits, and small edible toys in bulk for local shopkeepers.">
 
