--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     .hero {
       position: relative;
       height: 100vh;
-      background: url('Images/20250817_185810.png') no-repeat center center/cover;
+      background: url('Images/1000048747_11zon.webp') no-repeat center center/cover;
       margin-top: 60px;
       display: flex;
       align-items: center;
